[tool.poetry]
name = "renku_data_service"
version = "0.1.0"
description = ""
authors = ['Swiss Data Science Center <contact@datascience.ch>']
license = "Apache License 2.0"

packages = [
  { include = "renku_data_services/data_api", from = "../../bases" },
  { include = "renku_data_services/base_api", from = "../../components" },
  { include = "renku_data_services/db_config", from = "../../components" },
  { include = "renku_data_services/errors", from = "../../components" },
  { include = "renku_data_services/user_preferences", from = "../../components" },
  { include = "renku_data_services/app_config", from = "../../components" },
  { include = "renku_data_services/git", from = "../../components" },
  { include = "renku_data_services/storage", from = "../../components" },
  { include = "renku_data_services/authn", from = "../../components" },
  { include = "renku_data_services/crc", from = "../../components" },
  { include = "renku_data_services/authz", from = "../../components" },
  { include = "renku_data_services/project", from = "../../components" },
  { include = "renku_data_services/session_migrations", from = "../../components" },
  { include = "renku_data_services/session", from = "../../components" },
  { include = "renku_data_services/base_models", from = "../../components" },
  { include = "renku_data_services/utils", from = "../../components" },
  { include = "renku_data_services/users", from = "../../components" },
  { include = "renku_data_services/k8s", from = "../../components" },
  { include = "renku_data_services/message_queue", from = "../../components" },
  { include = "renku_data_services/migrations", from = "../../components" },
  { include = "renku_data_services/namespace", from = "../../components" },
  # Note: poetry poly does not detect the migrations as dependencies, but they are. Don't remove these!
  { include = "renku_data_services/storage_migrations", from = "../../components" },
  { include = "renku_data_services/crc_migrations", from = "../../components" },
  { include = "renku_data_services/user_preferences_migrations", from = "../../components" },
  { include = "renku_data_services/users_migrations", from = "../../components" },
  { include = "renku_data_services/authz_migrations", from = "../../components" },
  { include = "renku_data_services/events_migrations", from = "../../components" },
  { include = "renku_data_services/project_migrations", from = "../../components" },
  { include = "renku_data_services/session_migrations", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.11"
sanic = { extras = ["ext"], version = "^23.3.0" }
pydantic = {extras = ["email"], version = "^2.6.4"}
datamodel-code-generator = "^0.25.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
alembic = "^1.10.3"
asyncpg = "^0.27.0"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
tenacity = "^8.2.2"
httpx = "<0.24"
kubernetes = "^26.1.0"
python-ulid = "^1.1.0"
python-gitlab = "^3.15.0"
psycopg = { version = "^3.1.10", extras = ["binary"] }
# urllib3 v2 has some breaking changes that libraries haven't caught up yet (08.2023)
urllib3 = "^1.26.16"
deepmerge = "^1.1.0"
authlib = "^1.2.1"
redis = "^5.0.1"
dataclasses-avroschema = "^0.57.0"
undictify = "^0.11.3"
prometheus-sanic = "^3.0.0"
sentry-sdk = {version = "^1.43.0", extras = ["sanic"]}

[tool.poetry.group.dev.dependencies]
pyavro-gen = "^0.3.3"
fakeredis = "^2.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
