[tool.poetry]
name = "renku_storage"
version = "0.1.0"
description = ""
authors = ['Swiss Data Science Center <contact@datascience.ch>']
license = "Apache License 2.0"

packages = [
    { include = "renku_data_services/storage_api", from = "../../bases"},
    { include = "renku_data_services/migrations", from = "../../components"},
    { include = "renku_data_services/storage_schemas", from = "../../components"},
    { include = "renku_data_services/k8s", from = "../../components"},
    { include = "renku_data_services/storage_adapters", from = "../../components"},
    { include = "renku_data_services/users", from = "../../components"},
    { include = "renku_data_services/errors", from = "../../components"},
    {include = "renku_data_services/base_models",from = "../../components"},
    {include = "renku_data_services/base_api",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
