[tool.poetry]
name = "secret_storage"
version = "0.1.0"
description = ""
authors = ['Swiss Data Science Center <contact@datascience.ch>']
license = "Apache License 2.0"

packages = [
  { include = "secret_storage", from = "../../bases" },
  { include = "secret_storage", from = "../../components" },
]

[tool.poetry.dependencies]
python = "^3.11"
sanic = { extras = ["ext"], version = "^23.3.0" }
pydantic = "^2.1.1"
datamodel-code-generator = "^0.25.1"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.9" }
alembic = "^1.10.3"
asyncpg = "^0.29.0"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }
tenacity = "^8.2.2"
httpx = "<0.24"
kubernetes = "^26.1.0"
python-ulid = "^1.1.0"
python-gitlab = "^3.15.0"
psycopg = { version = "^3.1.10", extras = ["binary"] }
# urllib3 v2 has some breaking changes that libraries haven't caught up yet (08.2023)
urllib3 = "^1.26.16"
deepmerge = "^1.1.0"
authlib = "^1.2.1"
[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
